<resources>
    <string name="app_name">NearNote</string>
    <string name="write_all_field">Veuillez remplir tous les champs obligatoires</string>
    <string name="edit_note">EDIT_NOTE</string>
    <string name="add_note">ADD_NOTE</string>
    <string name="delete_note">Supprimer la note</string>
    <string name="confirm_delete_note">Êtes-vous sûr de vouloir supprimer cette note ?</string>
    <string name="delete">Supprimer</string>
    <string name="abort">Annuler</string>
    <string name="modify_note_title">Modifier la note</string>
    <string name="add_note_title">Ajouter une note</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="select_location">Please select a location on the map</string>
    <string name="location_selected_marker_title">Location</string>
    <string name="geocoding_error">Could not find address for this location.</string>
    <string name="location_name_hint">Enter location name (e.g., Home, Work)</string>
    <string name="poi_selected_toast">Selected: %s</string>
    <string name="no_location_selected_placeholder">Pas de lieu associé</string>
    <string name="view_note_title">View note details</string>
    <string name="title_label">Title:</string>
    <string name="text_label">Text:</string>
    <string name="close_button_text">Close</string>
    <string name="edit_button_text">Edit</string>
    <string name="clear_location_desc">delete button</string>
</resources>